--- a/primary-market.html
+++ b/primary-market.html
@@ -142,59 +142,7 @@
         </div>
     </header>
 
-    <!-- Marketplace Stats Section -->
-    <section class="stats-section" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); padding: 60px 20px; margin-top: -50px;">
-        <div class="container">
-            <div class="stats-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 30px; max-width: 1200px; margin: 0 auto;">
-                <div class="stat-card" style="background: rgba(255,255,255,0.15); backdrop-filter: blur(10px); border-radius: 20px; padding: 35px; text-align: center; border: 1px solid rgba(255,255,255,0.3); transition: all 0.3s ease;">
-                    <div class="stat-icon" style="width: 70px; height: 70px; margin: 0 auto 20px; background: rgba(255,255,255,0.2); border-radius: 50%; display: flex; align-items: center; justify-content: center;">
-                        <i class="fas fa-clipboard-list" style="font-size: 2em; color: white;"></i>
-                    </div>
-                    <div class="stat-value" id="activeListings" style="font-size: 2.8em; font-weight: 700; color: white; margin-bottom: 10px; text-shadow: 0 2px 4px rgba(0,0,0,0.2);">0</div>
-                    <div class="stat-label" style="color: rgba(255,255,255,0.95); font-size: 1.1em; font-weight: 500; text-transform: uppercase; letter-spacing: 0.5px;">Active Listings</div>
-                </div>
-                <div class="stat-card" style="background: rgba(255,255,255,0.15); backdrop-filter: blur(10px); border-radius: 20px; padding: 35px; text-align: center; border: 1px solid rgba(255,255,255,0.3); transition: all 0.3s ease;">
-                    <div class="stat-icon" style="width: 70px; height: 70px; margin: 0 auto 20px; background: rgba(255,255,255,0.2); border-radius: 50%; display: flex; align-items: center; justify-content: center;">
-                        <i class="fas fa-hand-holding-usd" style="font-size: 2em; color: white;"></i>
-                    </div>
-                    <div class="stat-value" id="totalVolume" style="font-size: 2.8em; font-weight: 700; color: white; margin-bottom: 10px; text-shadow: 0 2px 4px rgba(0,0,0,0.2);">$0</div>
-                    <div class="stat-label" style="color: rgba(255,255,255,0.95); font-size: 1.1em; font-weight: 500; text-transform: uppercase; letter-spacing: 0.5px;">Total Funded</div>
-                </div>
-                <div class="stat-card" style="background: rgba(255,255,255,0.15); backdrop-filter: blur(10px); border-radius: 20px; padding: 35px; text-align: center; border: 1px solid rgba(255,255,255,0.3); transition: all 0.3s ease;">
-                    <div class="stat-icon" style="width: 70px; height: 70px; margin: 0 auto 20px; background: rgba(255,255,255,0.2); border-radius: 50%; display: flex; align-items: center; justify-content: center;">
-                        <i class="fas fa-percentage" style="font-size: 2em; color: white;"></i>
-                    </div>
-                    <div class="stat-value" id="avgRate" style="font-size: 2.8em; font-weight: 700; color: white; margin-bottom: 10px; text-shadow: 0 2px 4px rgba(0,0,0,0.2);">0%</div>
-                    <div class="stat-label" style="color: rgba(255,255,255,0.95); font-size: 1.1em; font-weight: 500; text-transform: uppercase; letter-spacing: 0.5px;">Avg Interest Rate</div>
-                </div>
-                <div class="stat-card" style="background: rgba(255,255,255,0.15); backdrop-filter: blur(10px); border-radius: 20px; padding: 35px; text-align: center; border: 1px solid rgba(255,255,255,0.3); transition: all 0.3s ease;">
-                    <div class="stat-icon" style="width: 70px; height: 70px; margin: 0 auto 20px; background: rgba(255,255,255,0.2); border-radius: 50%; display: flex; align-items: center; justify-content: center;">
-                        <i class="fas fa-users" style="font-size: 2em; color: white;"></i>
-                    </div>
-                    <div class="stat-value" id="totalLenders" style="font-size: 2.8em; font-weight: 700; color: white; margin-bottom: 10px; text-shadow: 0 2px 4px rgba(0,0,0,0.2);">0</div>
-                    <div class="stat-label" style="color: rgba(255,255,255,0.95); font-size: 1.1em; font-weight: 500; text-transform: uppercase; letter-spacing: 0.5px;">Active Lenders</div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Modern Section Separator -->
-    <div class="section-separator">
-        <div class="separator-container">
-            <div class="separator-line"></div>
-            <div class="separator-icon">
-                <svg width="40" height="40" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M12 2L2 7L12 12L22 7L12 2Z" stroke="#38e07b" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                    <path d="M2 17L12 22L22 17" stroke="#38e07b" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                    <path d="M2 12L12 17L22 12" stroke="#38e07b" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-            </div>
-            <div class="separator-line"></div>
-        </div>
-        <div class="separator-glow"></div>
-    </div>
-
-    <!-- Loan Requests Section -->
+    <!-- Main Content -->
     <section class="section" id="loan-requests">
         <div class="section-header">
             <div class="heading-wrapper">
